--- a/partials/header.html
+++ b/partials/header.html
@@ -1,11 +1,11 @@
 <header>
   <nav>
-    <a href="/" class="logo">Game<span>Hub</span></a>
+    <a href="/browser-games/" class="logo">Game<span>Hub</span></a>
     <ul class="nav-menu">
-      <li><a href="/">Home</a></li>
-      <li><a href="/#games">Games</a></li>
-      <li><a href="/#categories">Categories</a></li>
-      <li><a href="/#new">New</a></li>
+      <li><a href="/browser-games/">Home</a></li>
+      <li><a href="/browser-games/#games">Games</a></li>
+      <!-- <li><a href="/#categories">Categories</a></li> -->
+      <li><a href="/browser-games/#new">New</a></li>
     </ul>
     <div class="search-box">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
